# fiatlight

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  Market.txt  Readme.md  fiat_hello.main.cpp  hello_imgui.ini  justfile  mypy.ini  project_codename.txt  pyproject.toml  pytest.ini  requirements-ai.txt  requirements-audio.txt  requirements-dev.txt  requirements-notebook.txt  requirements.txt
.github/workflows/: publish_doc.yml
cmake/: fetch_imgui_bundle.cmake
cpp/fiatlux/: functions_composition.cpp
cpp/fiatlux/computer_vision/: cv_color_type.cpp
demos/: fiat_add.main.cpp  fiat_image.main.cpp
devel_doc/: .gitignore  deploy.md
doc/: package_structure.md
examples/img_proc_playground/: fiat_cv_enums.py  main.py
examples/img_proc_playground/fiat_settings/: main.fiat_graph.json  main.fiat_user.json  main.ini  main.node_editor.json
examples/img_proc_playground/tests/: test_enums.py
examples/img_proc_playground/wrappers/: __init__.py  color.py  compositing.py  contours.py  edges.py  features.py  filter.py  geometry.py  lut.py  morphology.py  photo.py  source.py  threshold.py  tone.py
fiat_settings/: usability_markdown_node.fiat_user.json  usability_markdown_node.node_editor.json
python/: fiat_add.py  fiat_image.py  fiat_play_versatile.py  imgui.ini  play_versatile_math.py
python/fiatlux_py/: __init__.py  any_data_with_gui.py  base_data_with_gui.py  function_with_gui.py  functions_composition_graph.py  image_with_gui.py  versatile.py
python/fiatlux_py/computer_vision/: __init__.py  cv_color_type.py  image_with_gui.py  lut.py  split_merge.py
src/: .gitignore
src/cpp/: Readme.md  dummy.cpp
src/cpp/cmake/: fetch_imgui_bundle.cmake
src/cpp/demos/: CMakeLists.txt  fiat_add.main.cpp  fiat_image.main.cpp
src/cpp/fiatlight/: CMakeLists.txt  functions_composition.cpp  functions_composition.h
src/cpp/fiatlight/computer_vision/: image_with_gui.cpp  image_with_gui.h  lut.h  split_merge.h
src/cpp/fiatlux/: functions_composition.cpp
src/cpp/fiatlux/computer_vision/: image_with_gui.cpp  image_with_gui.h  lut.cpp  lut.h  split_merge.cpp  split_merge.h
src/fiatlux/: CMakeLists.txt
src/fiatlux/computer_vision/: image_with_gui.h
src/python/: abc_test.py  mypy.ini
src/python/a/: __init__.py
src/python/a/b/: __init__.py
src/python/demos/: play_versatile_math.py
src/python/fiatlight/: .gitignore  __init__.py  all_to_gui.py  any_data_with_gui.py  base_data_with_gui.py  data_presenters.py  fiatlight.py  fiatlight_gui.py  fiatlight_types.py  fiatlux.py  function_node.py  function_node_gui.py  function_with_gui.py  functions_composition_graph.py  functions_graph.py  functions_graph_gui.py  functions_node.py  standard_gui_handlers.py  to_data_with_gui.py  to_gui.py  versatile.py
src/python/fiatlight/app_runner/: __init__.py  fiat_gui.py  fiatlight_gui.py  gui_config.py
src/python/fiatlight/computer_vision/: __init__.py  cv_color_type.py  cv_color_type_gui.py  image_gui.py  image_types.py  image_with_gui.py  img_proc.py  lut.py  lut_gui.py  split_merge.py
src/python/fiatlight/core/: __init__.py  any_data_gui_callbacks.py  any_data_gui_handlers.py  any_data_with_gui.py  composite_gui.py  fiat_types.py  fiatlight_style.py  function_node.py  function_signature.py  function_with_gui.py  functions_graph.py  optional_gui.py  primitives_gui.py  standard_gui_handlers.py  to_gui.py
src/python/fiatlight/demos/: canny.py  fiat_add.py  fiat_image.py  oil_paint.py  play_versatile_math.py  play_versatile_word.py  sandbox_sdxl_node.py
src/python/fiatlight/doc/: _p_fiat_runner.puml  _p_to_gui.puml  intro.md  package_structure.md
src/python/fiatlight/f2/: any_f.py  boxed.py  data_presenters.py  done_function_container.py  done_function_node.py  done_function_with_settable_params.py  function_node.py  graph2.py  (+3 more)
src/python/fiatlux/: __init__.py  base_data_with_gui.py  fiatlux.py  function_with_gui.py  functions_composition_graph.py  versatile.py
(+956 files in other folders)
