[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fiatlight"
version = "0.5.0"
authors = [{ name = "Pascal Thomet", email = "pthomet@gmail.com" }]
description = "fiatlight: shine light inside your algorithm pipelines"
readme = "Readme.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
keywords = ["python"]

dependencies = [
    "imgui-bundle>=1.92.4",
    "opencv-python",
    "pydantic",
    "Pillow",
    "types-Pillow",
#    "numpy<2.0.0",  # numpy 2.0.0 breaks compatibility with librosa. Let's wait a bit...
    "numpy",
    "matplotlib",
#    "fire",  # unavailable on pyodide => install message in fiatlight_cli.py
    "tabulate",
    "pandas",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "src/python/fiatlight/doc", "devel_doc"
]

[tool.hatch.build.targets.wheel]
packages = ["src/python/fiatlight"]

[project.urls]
homepage = "https://pthom.github.io/fiatlight/"
repository = "https://github.com/pthom/fiatlight/"
documentation = "https://pthom.github.io/fiatlight/"

[tool.ruff]
line-length = 120

[project.scripts]
fiatlight = "fiatlight.fiat_cli.fiatlight_cli:main"
